# st_persian_datepicker

./: MANIFEST.in  README.md  example_app.py  gitignore  pyproject.toml
.github/workflows/: ci.yml  release.yml
dist_tmp/: st_persian_datepicker-0.1.0-py3-none-any.whl
scripts/: publish_to_testpypi.sh
st_persian_datepicker/: __init__.py
st_persian_datepicker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
st_persian_datepicker/frontend/: index.html
tests/: test_import.py
